--- a/amplify.yml
+++ b/amplify.yml
@@ -3,6 +3,8 @@ frontend:
   phases:
     preBuild:
       commands:
+        - nvm use 18
+        - node -v
         - npm install -g pnpm
         - pnpm install
     build:
