--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@spruceid/didkit-wasm": "^0.2.1",
+    "jotai": "^2.4.3",
     "next": "13.5.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "typescript": "5.2.2"
+    "typescript": "5.2.2",
+    "vess-sdk": "1.0.0-alpha.40"
   },
   "devDependencies": {
     "@types/node": "20.6.3",
