--- a/package.json
+++ b/package.json
@@ -9,11 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-navigation-menu": "^1.1.4",
+    "@radix-ui/react-slot": "^1.0.2",
     "@spruceid/didkit-wasm": "^0.2.1",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.0.0",
     "jotai": "^2.4.3",
+    "lucide-react": "^0.286.0",
     "next": "13.5.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "tailwind-merge": "^1.14.0",
+    "tailwindcss-animate": "^1.0.7",
     "typescript": "5.2.2",
     "vess-sdk": "1.0.0-alpha.40"
   },
@@ -21,7 +29,11 @@
     "@types/node": "20.6.3",
     "@types/react": "18.2.22",
     "@types/react-dom": "18.2.7",
+    "autoprefixer": "^10.4.16",
     "eslint": "8.49.0",
-    "eslint-config-next": "13.5.1"
+    "eslint-config-next": "13.5.1",
+    "postcss": "^8.4.31",
+    "react-icons": "^4.11.0",
+    "tailwindcss": "^3.3.3"
   }
 }
