added veramo verification just in case

--- a/package.json
+++ b/package.json
@@ -14,17 +14,27 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@spruceid/didkit-wasm": "^0.2.1",
     "@types/react-icons": "^3.0.0",
+    "@veramo/core": "^5.5.3",
+    "@veramo/credential-eip712": "^5.5.3",
+    "@veramo/credential-ld": "^5.5.3",
+    "@veramo/credential-w3c": "^5.5.3",
+    "@veramo/did-provider-pkh": "^5.5.3",
+    "@veramo/did-provider-web": "^5.5.3",
+    "@veramo/did-resolver": "^5.5.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "did-resolver": "^4.1.0",
     "jotai": "^2.4.3",
     "lucide-react": "^0.286.0",
     "next": "13.5.1",
+    "pkh-did-resolver": "^1.2.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwind-merge": "^1.14.0",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "5.2.2",
-    "vess-sdk": "1.0.0-alpha.40"
+    "vess-sdk": "1.0.0-alpha.40",
+    "web-did-resolver": "^2.0.27"
   },
   "devDependencies": {
     "@types/node": "20.6.3",
