--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-navigation-menu": "^1.1.4",
     "@radix-ui/react-slot": "^1.0.2",
-    "@spruceid/didkit-wasm": "^0.2.1",
+    "@dig-dao/didkit-wasm": "0.1.0",
     "@types/react-icons": "^3.0.0",
     "@veramo/core": "^5.5.3",
     "@veramo/credential-eip712": "^5.5.3",
