enable to install github packages

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "preinstall": "sh generate-npmrc.sh",
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
